@@ -35,6 +35,15 @@
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.1</version>
+                    <configuration>
+                        <argLine>-server -Xmx4G -XX:+UseConcMarkSweepGC</argLine>
+                        <!-- <mainClass>mneme.http.server.HttpServer</mainClass> -->
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
